deployment-hello-appv1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
      annotations:
        kubernetes.io/psp: privileged
    spec:
      containers:
      - name: hello-app
        image: antek51/hello-appv1:3
        ports:
        - containerPort: 80
