deployment-hello-appv1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: hello-app
