deployment-hello-appv1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.chiconniere.fr
    secretName: hello-app-tls-secret
  rules:
  - host: app.chiconniere.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-app-svc
            port:
              number: 80
